# i-core

./: .gitignore  README.md  _speed_test.py
instructor-matching-backend/: .env.example  README.md  pyproject.toml  requirements.txt
instructor-matching-backend/app/: main.py
instructor-matching-backend/app/api/: auth.py  instructor_portal.py  instructors.py  matching.py  schedules.py  task_orders.py
instructor-matching-backend/app/core/: config.py  dependencies.py  middleware.py  security.py
instructor-matching-backend/app/db/: database.py
instructor-matching-backend/app/models/: __init__.py  models.py
instructor-matching-backend/app/schemas/: auth.py  instructor.py  matching.py  task_order.py
instructor-matching-backend/app/services/: agent_core_adapter.py  ai_agent.py  auth_service.py  external_instructor_db.py  instructor_service.py  matching_service.py  task_order_service.py
instructor-matching-backend/tests/: conftest.py
instructor-matching-core/: README.md  pyproject.toml  requirements.txt
instructor-matching-core/matching_core/: __init__.py  config.py  exceptions.py
instructor-matching-core/matching_core/data/: stopwords.json  synonyms.json
instructor-matching-core/matching_core/engine/: __init__.py  base.py  keyword_matcher.py  reason_generator.py  rule_scorer.py  score_combiner.py
instructor-matching-core/matching_core/models/: __init__.py  entities.py
instructor-matching-core/matching_core/parser/: __init__.py  base.py  docx_parser.py  extractor.py  hwp_parser.py  pdf_parser.py
instructor-matching-core/tests/: conftest.py
(+100 files in other folders)
