[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instructor-matching-backend"
version = "0.1.0"
description = "강사 매칭 플랫폼 백엔드 API"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
