[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instructor-matching-core"
version = "0.1.0"
description = "강사 매칭 코어 라이브러리 - 문서 파싱 및 매칭 엔진"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber==0.10.4",
    "python-docx==1.1.2",
    "olefile==0.47",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "hypothesis==6.112.0",
    "mypy==1.11.0",
    "pytest-cov==5.0.0",
]

[tool.setuptools.packages.find]
include = ["matching_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
